lib/dave/src/dave.h

/**
 * @brief Callback invoked when an MLS protocol failure occurs
 * @param source The source/component where the failure occurred
 * @param reason Human-readable failure reason
 * @param userData User-provided context pointer
 */
typedef void (*DAVEMLSFailureCallback)(const char* source, const char* reason, void* userData);
/**
 * @brief Callback invoked with the computed pairwise fingerprint for identity verification
 * @param fingerprint Pointer to fingerprint bytes (freed by the library after the callback returns)
 * @param length Length of fingerprint in bytes
 * @param userData User-provided context pointer
 */
typedef void (*DAVEPairwiseFingerprintCallback)(const uint8_t* fingerprint, size_t length, void* userData);
/*******************************************************************************
 * Version
 ******************************************************************************/

/**
 * @brief Returns the maximum protocol version supported by this library
 * @return Maximum supported protocol version number
 */
DAVE_EXPORT uint16_t daveMaxSupportedProtocolVersion(void);
/*******************************************************************************
 * Session Management
 ******************************************************************************/

/**
 * @brief Creates a new DAVE session
 * @param context Currently unused platform-specific context pointer (can be NULL)
 * @param authSessionId String used to manage persistent key lifetimes (can be NULL)
 * @param callback Callback invoked on MLS failures
 * @param userData User data pointer passed to the callback
 * @return New session handle, or NULL on failure. Must be destroyed with daveSessionDestroy()
 */
DAVE_EXPORT DAVESessionHandle daveSessionCreate(void* context,
                                                const char* authSessionId,
                                                DAVEMLSFailureCallback callback,
                                                void* userData);
/**
 * @brief Destroys a session and frees associated resources
 * @param session Session handle to destroy
 */
DAVE_EXPORT void daveSessionDestroy(DAVESessionHandle session);
/**
 * @brief Initializes a session with protocol version and group information
 * @param session Session handle
 * @param version Protocol version to use
 * @param groupId Group identifier common to all users in the group
 * @param selfUserId User ID of the local user
 */
DAVE_EXPORT void daveSessionInit(DAVESessionHandle session,
                                 uint16_t version,
                                 uint64_t groupId,
                                 const char* selfUserId);
/**
 * @brief Resets the session state
 * @param session Session handle
 */
DAVE_EXPORT void daveSessionReset(DAVESessionHandle session);
/**
 * @brief Sets the protocol version for the session
 * @param session Session handle
 * @param version Protocol version to set
 */
DAVE_EXPORT void daveSessionSetProtocolVersion(DAVESessionHandle session, uint16_t version);
/**
 * @brief Gets the current protocol version of the session
 * @param session Session handle
 * @return Current protocol version
 */
DAVE_EXPORT uint16_t daveSessionGetProtocolVersion(DAVESessionHandle session);
/**
 * @brief Retrieves the authenticator from the last MLS epoch
 * @param session Session handle
 * @param[out] authenticator Output pointer to authenticator bytes (caller must free)
 * @param[out] length Output pointer to authenticator length
 */
DAVE_EXPORT void daveSessionGetLastEpochAuthenticator(DAVESessionHandle session,
                                                      uint8_t** authenticator,
                                                      size_t* length);
/**
 * @brief Sets the external sender credentials for the session
 * @param session Session handle
 * @param externalSender External sender credential bytes
 * @param length Length of external sender data
 */
DAVE_EXPORT void daveSessionSetExternalSender(DAVESessionHandle session,
                                              const uint8_t* externalSender,
                                              size_t length);
/**
 * @brief Processes MLS proposals and generates commit/welcome messages
 * @param session Session handle
 * @param proposals Serialized proposal bytes
 * @param length Length of proposals
 * @param recognizedUserIds Array of recognized user ID strings
 * @param recognizedUserIdsLength Number of recognized user IDs
 * @param[out] commitWelcomeBytes Output buffer to commit/welcome message bytes (caller must free)
 * @param[out] commitWelcomeBytesLength Output length of the commit/welcome message
 */
DAVE_EXPORT void daveSessionProcessProposals(DAVESessionHandle session,
                                             const uint8_t* proposals,
                                             size_t length,
                                             const char** recognizedUserIds,
                                             size_t recognizedUserIdsLength,
                                             uint8_t** commitWelcomeBytes,
                                             size_t* commitWelcomeBytesLength);
/**
 * @brief Processes an incoming MLS commit message
 * @param session Session handle
 * @param commit Serialized commit message bytes
 * @param length Length of commit message
 * @return Commit result handle. Must be destroyed with daveCommitResultDestroy()
 */
DAVE_EXPORT DAVECommitResultHandle daveSessionProcessCommit(DAVESessionHandle session,
                                                            const uint8_t* commit,
                                                            size_t length);
/**
 * @brief Processes an incoming MLS welcome message to join a group
 * @param session Session handle
 * @param welcome Serialized welcome message bytes
 * @param length Length of welcome message
 * @param recognizedUserIds Array of recognized user ID strings
 * @param recognizedUserIdsLength Number of recognized user IDs
 * @return Welcome result handle. Must be destroyed with daveWelcomeResultDestroy()
 */
DAVE_EXPORT DAVEWelcomeResultHandle daveSessionProcessWelcome(DAVESessionHandle session,
                                                              const uint8_t* welcome,
                                                              size_t length,
                                                              const char** recognizedUserIds,
                                                              size_t recognizedUserIdsLength);
/**
 * @brief Gets the marshalled MLS key package for this session
 * @param session Session handle
 * @param[out] keyPackage Output buffer to key package bytes (caller must free)
 * @param[out] length Output length of the key package
 */
DAVE_EXPORT void daveSessionGetMarshalledKeyPackage(DAVESessionHandle session,
                                                    uint8_t** keyPackage,
                                                    size_t* length);
/**
 * @brief Gets a key ratchet for a specific user in the session
 * @param session Session handle
 * @param userId User ID to get key ratchet for
 * @return Key ratchet handle. Must be destroyed with daveKeyRatchetDestroy()
 */
DAVE_EXPORT DAVEKeyRatchetHandle daveSessionGetKeyRatchet(DAVESessionHandle session,
                                                          const char* userId);
/**
 * @brief Computes a pairwise fingerprint for identity verification with another user
 * @param session Session handle
 * @param version Protocol version currently in use
 * @param userId User ID of the remote user to compute the fingerprint for
 * @param callback Callback to receive the fingerprint
 * @param userData User data passed to callback
 */
DAVE_EXPORT void daveSessionGetPairwiseFingerprint(DAVESessionHandle session,
                                                   uint16_t version,
                                                   const char* userId,
                                                   DAVEPairwiseFingerprintCallback callback,
                                                   void* userData);
/*******************************************************************************
 * Key Ratchet
 ******************************************************************************/

/**
 * @brief Destroys a key ratchet and frees associated resources
 * @param keyRatchet Key ratchet handle to destroy
 */
DAVE_EXPORT void daveKeyRatchetDestroy(DAVEKeyRatchetHandle keyRatchet);
/*******************************************************************************
 * Commit Result
 ******************************************************************************/

/**
 * @brief Checks if processing the commit failed
 * @param commitResultHandle Commit result handle
 * @return true if commit processing failed
 */
DAVE_EXPORT bool daveCommitResultIsFailed(DAVECommitResultHandle commitResultHandle);
/**
 * @brief Checks if the commit should be ignored
 * @param commitResultHandle Commit result handle
 * @return true if commit should be ignored
 */
DAVE_EXPORT bool daveCommitResultIsIgnored(DAVECommitResultHandle commitResultHandle);
/**
 * @brief Gets the list of member IDs in the roster after the commit
 * @param commitResultHandle Commit result handle
 * @param[out] rosterIds Output buffer to array of roster member IDs (caller must free)
 * @param[out] rosterIdsLength Output length of the roster member IDs array
 */
DAVE_EXPORT void daveCommitResultGetRosterMemberIds(DAVECommitResultHandle commitResultHandle,
                                                    uint64_t** rosterIds,
                                                    size_t* rosterIdsLength);
/**
 * @brief Gets the signature for a specific roster member
 * @param commitResultHandle Commit result handle
 * @param rosterId Roster member ID
 * @param[out] signature Output buffer to signature bytes (caller must free)
 * @param[out] signatureLength Output length of the signature
 */
DAVE_EXPORT void daveCommitResultGetRosterMemberSignature(DAVECommitResultHandle commitResultHandle,
                                                          uint64_t rosterId,
                                                          uint8_t** signature,
                                                          size_t* signatureLength);
/**
 * @brief Destroys a commit result and frees associated resources
 * @param commitResultHandle Commit result handle to destroy
 */
DAVE_EXPORT void daveCommitResultDestroy(DAVECommitResultHandle commitResultHandle);
/*******************************************************************************
 * Welcome Result
 ******************************************************************************/

/**
 * @brief Gets the list of member IDs in the roster from the welcome message
 * @param welcomeResultHandle Welcome result handle
 * @param[out] rosterIds Output buffer to array of roster member IDs (caller must free)
 * @param[out] rosterIdsLength Output length of the roster member IDs array
 */
DAVE_EXPORT void daveWelcomeResultGetRosterMemberIds(DAVEWelcomeResultHandle welcomeResultHandle,
                                                     uint64_t** rosterIds,
                                                     size_t* rosterIdsLength);
/**
 * @brief Gets the signature for a specific roster member
 * @param welcomeResultHandle Welcome result handle
 * @param rosterId Roster member ID
 * @param[out] signature Output buffer to signature bytes (caller must free)
 * @param[out] signatureLength Output length of the signature
 */
DAVE_EXPORT void daveWelcomeResultGetRosterMemberSignature(DAVEWelcomeResultHandle welcomeResultHandle,
                                                           uint64_t rosterId,
                                                           uint8_t** signature,
                                                           size_t* signatureLength);
/**
 * @brief Destroys a welcome result and frees associated resources
 * @param welcomeResultHandle Welcome result handle to destroy
 */
DAVE_EXPORT void daveWelcomeResultDestroy(DAVEWelcomeResultHandle welcomeResultHandle);
/*******************************************************************************
 * Encryptor
 ******************************************************************************/

/**
 * @brief Creates a new media frame encryptor
 * @return New encryptor handle. Must be destroyed with daveEncryptorDestroy()
 */
DAVE_EXPORT DAVEEncryptorHandle daveEncryptorCreate(void);
/**
 * @brief Destroys an encryptor and frees associated resources
 * @param encryptor Encryptor handle to destroy
 */
DAVE_EXPORT void daveEncryptorDestroy(DAVEEncryptorHandle encryptor);